--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cluster": "^0.7.7",
+    "dns": "^0.2.2",
     "firebase": "^6.1.1",
     "jquery": "^3.4.1",
     "md5": "^2.2.1",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
+    "repl": "^0.1.3",
     "uuid": "^3.3.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
